# Agentscan

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER_CLASSIFICATION_README.md  README.md  README_IMPLEMENTATION.md  SERVER_OPS.md  UPDATE.md  VALIDATION_UPDATE_SUMMARY.md  agent0_kitchen.json  check_classification_details.py  classify_docker.sh  docker-compose.backend-only.yml  docker-compose.yml  my_session.session  tg_export.py
backend/: .env.example  BLOCKCHAIN_SETUP.md  Dockerfile  SERVER_OPS.md  backfill_gas_data.py  check_classified.py  classify_agents.py  classify_background.sh  clean_invalid_classifications.py  fast_sync.sh  pyproject.toml  reclassify_agents.py  test_bsc_sync.py  test_sync.py  verify_gas_data.py
backend/docs/: MULTI_NETWORK_SETUP.md
backend/scripts/: backfill_activities.py  backfill_activities_from_chain.py  docker-exec.sh  docker-logs.sh  docker-reset-sync.sh  docker-trigger-sync.sh  init_networks.py  remove_mainnets.py  reset_and_resync.py  sync_reputation_now.py  sync_reputation_now.sh
backend/src/: main.py
backend/src/api/: activities.py  agents.py  analytics.py  classification.py  ecosystems.py  endpoint_health.py  feedback.py  metadata.py  networks.py  stats.py  sync.py
backend/src/core/: blockchain_config.py  config.py  networks_config.py  reputation_config.py  telegram_config.py
backend/src/db/: database.py  init_data.py  init_networks.py  migrate_activity_indexes.py  migrate_add_active_field.py  migrate_add_classification_source.py  migrate_add_contracts.py  migrate_add_ecosystem_tables.py  migrate_add_endpoint_status.py  (+11 more)
(+262 files in other folders)
